...

// AddTimesheetRecord View
"addTimesheetRecord.comingSoon.title" = "Not implemented";
"addTimesheetRecord.comingSoon.description" = "Sorry, this functionality isn't yet implemented.";

// Reports View
"reports.navigationTitle" = "Reports";
"reports.tabTitle" = "Reports";

// Report Types - Titles
"reports.userWeek.title" = "Weekly View";
"reports.userMonth.title" = "Monthly View";
"reports.userYear.title" = "Yearly View";
...
